Reetan.Nayak Dev 25/force-app/main/default/objects/Product2/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <type>TextArea</type>
</CustomField>