Reetan.Nayak Dev 25/force-app/main/default/objects/Product2/fields/Modality__c.field-meta.xml
<CustomField>
    <fullName>Modality__c</fullName>
    <label>Modality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>