Reetan.Nayak Dev 25/force-app/main/default/objects/Product2/fields/Product_Picture__c.field-meta.xml
<CustomField>
    <fullName>Product_Picture__c</fullName>
    <label>Product Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>