Reetan.Nayak Dev 25/force-app/main/default/objects/Product2/fields/UB_Brand__c.field-meta.xml
<CustomField>
    <fullName>UB_Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>