Reetan.Nayak Dev 25/force-app/main/default/objects/Product2/fields/UB_Image__c.field-meta.xml
<CustomField>
    <fullName>UB_Image__c</fullName>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>